--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,7 +8,9 @@ DoubleNegation:
   Enabled: false
 Encoding:
   Enabled: false
-FavorSprintf:
+FormatString:
+  Enabled: false
+IfUnlessModifier:
   Enabled: false
 LineLength:
   Enabled: false
@@ -17,6 +19,8 @@ MethodLength:
 PercentLiteralDelimiters:
   Enabled: false
 SignalException:
+  Enabled: false
+SingleSpaceBeforeFirstArg:
   Enabled: false
 SpaceInsideBrackets:
   Enabled: false
